home and destinations

--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -57,7 +57,7 @@
     <div class="container">
         <h1 style="font-family: 'Quicksand', sans-serif;">Welcome to your</h1>
         <h2 style="font-family: 'Castoro Titling', serif;">Personalized Trip Planner</h2>
-        <a href="/start/" class="btn">Begin</a>
+        <a href="destination/" class="btn">Begin</a>
     </div>
 </body>
 </html>
