--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -6,7 +6,7 @@
     <title>Personalized Trip Planner</title>
     {% load static %}
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Castoro+Titling&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+{#    <link rel="stylesheet" href="{% static 'css/style.css' %}">#}
     <style>
         body {
             font-family: Arial, sans-serif;
