--- a/home/templates/home/userInput.html
+++ b/home/templates/home/userInput.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,10 +18,12 @@
     .carousel-inner img {
       height: 300px;
       object-fit: cover;
+        width: auto;
+      object-fit: contain; /* Maintains aspect ratio */
       border-radius: 10px;
     }
     .btn-next {
-      background: #2ECC71;
+      background: #40B59F;
       border: none;
       padding: 10px 20px;
       border-radius: 30px;
@@ -28,6 +31,9 @@
       cursor: pointer;
       margin-top: 20px;
     }
+    .btn-next:hover {
+    background-color: #339980;
+}
   </style>
 </head>
 <body>
@@ -45,9 +51,10 @@
     style="width: 250px; padding: 10px; border-radius: 10px; border: 1px solid #ccc; margin-top: 20px; outline: none;"
   >
     <option value="0-10">0-10 years old</option>
-    <option value="10-15">10-15 years old</option>
-    <option value="15-20">15-20 years old</option>
-    <option value="20-30">20-30 years old</option>
+    <option value="10-15">10-18 years old</option>
+    <option value="15-20">18-30 years old</option>
+    <option value="20-30">30-50 years old</option>
+    <option value="20-30">50+ years old</option>
   </select>
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin-top: 40px;">
@@ -59,16 +66,16 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="bus.jpg" class="d-block w-100" alt="Bus">
+        <img src="{% static 'images/bus.png' %}" class="d-block w-100" alt="Bus">
       </div>
       <div class="carousel-item">
-        <img src="campfire.jpg" class="d-block w-100" alt="Campfire">
+        <img src="{% static 'images/camp.png' %}" class="d-block w-100" alt="Campfire">
       </div>
       <div class="carousel-item">
-        <img src="mountain.jpg" class="d-block w-100" alt="Mountain">
+        <img src="{% static 'images/mountain.png' %}" class="d-block w-100" alt="Mountain">
       </div>
       <div class="carousel-item">
-        <img src="hiking.jpg" class="d-block w-100" alt="Hiking">
+        <img src="{% static 'images/hike.png' %}" class="d-block w-100" alt="Hiking">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -85,7 +92,7 @@
 
   <script>
     function goToNextPage() {
-      //window.location.href = 'destination.html'; // Change to your destination page URL
+      window.location.href = "{% url 'activities' %}"; // Change to your destination page URL
     }
   </script>
 
