--- a/home/templates/home/userInput.html
+++ b/home/templates/home/userInput.html
@@ -107,6 +107,7 @@
   </form>
 
   <script>
+
     function goToNextPage() {
       // Collect the selected age groups
     const selectedOptions = Array.from(document.getElementById('ageGroups').selectedOptions).map(option => option.value);
@@ -115,19 +116,10 @@
     localStorage.setItem('selectedAgeGroups', JSON.stringify(selectedOptions));
 
     // Redirect to the next page
-    window.location.href = "{% url 'activities' %}"; // Change to your destination page URL
+    window.location.href = `{% url 'activities' %}?selectedAdeGroups=${encodeURIComponent(selectedOptions)}`; // Change to your destination page URL
  // Check localStorage for stored age groups and preselect them
-  window.onload = function() {
-      const storedAgeGroups = JSON.parse(localStorage.getItem('selectedAgeGroups'));
-      if (storedAgeGroups) {
-          const ageGroupSelect = document.getElementById('ageGroups');
-          for (let option of ageGroupSelect.options) {
-              if (storedAgeGroups.includes(option.value)) {
-                  option.selected = true;
-              }
-          }
-      }
-  }}
+
+  }
   </script>
 
 </body>
