--- a/home/templates/admin.html
+++ b/home/templates/admin.html
@@ -64,17 +64,18 @@
                 <td>{{ activity.6 }}</td>
                 <td>{{ activity.7 }}</td>
                 <td>{{ activity.8 }}</td>
-                <td>
-                     <a href="{% url 'edit_activity' activity_id=activity.0 %}" class="btn">Edit</a>
-                     <a href="{% url 'delete_activity' activity_id=activity.0%}" class="btn" onclick="return confirm('Are you sure you want to delete this activity?');">Delete</a>
-                    <a href="{% url 'add_activity' activity_id=activity.0 %}" class="btn">Add</a>
-                </td>
+               <td style="display: flex; gap: 10px; justify-content: center;">
+    <a href="{% url 'edit_activity' activity_id=activity.0 %}" class="btn">Edit</a>
+    <a href="{% url 'delete_activity' activity_id=activity.0 %}" class="btn"
+       onclick="return confirm('Are you sure you want to delete this activity?');">Delete</a>
+</td>
+
             </tr>
             {% endfor %}
         </tbody>
     </table>
-
-     <a href="{% url 'admin_logout' %}" class="btn" style="background-color: #FF0000; color: white;">Logout</a>
+<a href="{% url 'add_activity' %}" class="btn" style="margin-top: 20px; display: inline-block;">Add</a>
+<a href="{% url 'admin_logout' %}" class="btn" style="background-color: #FF0000; color: white; margin-top: 20px; display: inline-block;">Logout</a>
 
     <script>
         function editActivity(id) {
